<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/sobre_o_app" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Preto"
        android:layout_marginTop="103dp"
        android:text="@string/sobre_o_app2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Preto"
        android:layout_marginTop="151dp"
        android:text="@string/sobre_o_app3" />

</RelativeLayout>