<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".activity.CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_text"
            android:textColor="@color/Branco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text"
            android:ems="10"
            android:hint="@string/nome_text"
            android:inputType="textPersonName"
            android:textColor="@color/Branco"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone_text"
            android:textColor="@color/Branco"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="320dp" />

        <EditText
            android:id="@+id/editText_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text"
            android:ems="10"
            android:hint="@string/telefone_text"
            android:inputType="phone"
            android:textColor="@color/Branco" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@color/Branco"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="174dp" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text"
            android:ems="10"
            android:hint="@string/e_mail_text"
            android:inputType="textEmailAddress"
            android:textColor="@color/Branco"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha_text"
            android:textColor="@color/Branco"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="246dp" />

        <EditText
            android:id="@+id/editText_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_text"
            android:ems="10"
            android:hint="@string/senha_text"
            android:inputType="textPersonName"
            android:textColor="@color/Branco" />

        <Button
            android:id="@+id/bt_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/primary_dark"
            android:elevation="10dp"
            android:text="Cadastrar"
            android:textAlignment="center"
            android:textColor="@color/Branco" />

    </LinearLayout>

</LinearLayout>