<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:baselineAligned="true"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgview_logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/logo_prototipo_mateus" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:background="@drawable/background_text"
                    android:textColorHint="@color/Preto"
                    android:textColor="@color/Preto"
                    android:shadowColor="@color/Preto"
                    android:textColorLink="@color/Preto"
                    android:textColorHighlight="@color/Preto"
                    android:layout_marginBottom="16dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@drawable/background_text"
                    android:textColorHint="@color/Preto"
                    android:textColor="@color/Preto"
                    android:shadowColor="@color/Preto"
                    android:textColorLink="@color/Preto"
                    android:textColorHighlight="@color/Preto"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:elevation="5dp"
                        android:background="@color/primary_dark"
                        android:text="@string/action_sign_in_short"
                        android:textAlignment="center"
                        android:textColor="@color/Branco"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/bt_cadastre_se"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:background="@color/primary_dark"
                        android:text="Cadastre-se"
                        android:textColor="@color/Branco" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                >

            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</LinearLayout>